hero container fixed from margin to text-align:center;

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ ul {
   background: #2f303a;
   padding-top: 200px;
   padding-bottom: 200px;
+  text-align: center;
 }
 .hero h2 {
   margin: 0px;
@@ -84,15 +85,14 @@ ul {
   color: #ffffff;
 }
 .hero-container {
-  align-items: center;
   padding-top: 30px;
   width: 100%;
 }
 .hero-button {
-  display: block;
+  display: inline-block;
   min-width: 200px;
   padding: 10px 32px;
-  margin: 0px auto;
+  margin: 0px;
   font-weight: bold;
   font-size: 16px;
   line-height: 30px;
